dnl AC_INIT(configure.in)
AC_INIT(BibleStudy, 2.0)
AC_CANONICAL_SYSTEM()
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(biblestudy, 0.1)

AC_LANG(C++)
AC_PROG_CXX
AC_LANG_CPLUSPLUS
AM_PROG_LIBTOOL
AM_OPTIONS_WXCONFIG
AC_ARG_WITH([wxmozilla], [AS_HELP_STRING(--with-wxmozilla,Use the wxMozilla library for HTML rendering)], [AC_DEFINE(WITH_WXMOZILLA, [], [Defined if wxMozilla library is to be used]) with_wxmozilla=1], with_wxmozilla=0)

AC_CHECK_HEADERS(libreadingplanner/PDBManager.h, ,
	AC_MSG_ERROR(ReadingPlanner libraries not found))

#AC_CHECK_LIB(boost_filesystem, main, ,
#	AC_MSG_ERROR(boost_filesystem library was not found))
AC_CHECK_LIB(sword, main, ,
	AC_MSG_ERROR(sword library was not found))
AC_CHECK_LIB(ReadingPlanner, main, ,
	AC_MSG_ERROR(ReadingPlanner library was not found))
AC_CHECK_LIB(instaide, PltGetUserCount, , 
        AC_MSG_NOTICE(Palm library not found))
	
if test "$with_wxmozilla" == 1; then
	AC_MSG_NOTICE(Using wxMozilla library)
	wx_libs="std"
else
	AC_MSG_NOTICE(Using internal wxHTML for HTML rendering)
	wx_libs="std"
fi

AC_SUBST(WX_LIBS_ARGS, $wx_libs)

AM_PATH_WXCONFIG(2.4.0, WXFOUND=1)

if test "$WXFOUND" != 1; then
	AC_MSG_ERROR([
		Please check that wx-config is in the path, the directory
		where wxWindows libraries are installed (returned by
		'wx-config --libs' command) is in LD_LIBRARY_PATH or
		equivalent variable ans wxWindows is version 2.4.0 or above.
	])
fi


if $WX_CONFIG_NAME --cxxflags | grep -q WXMSW; then
	use_windows=yes

	changequote(<<,>>)
	RC_WX_INCLUDES=`echo " $WX_CPPFLAGS" | sed -e 's/ -[^I][^ ]*//g' | sed -e 's/ -I\([^ ]*\)/ --include-dir \1/g'`
	changequote([,])
else
	use_windows=no
fi
AM_CONDITIONAL(USE_WINDOWS, test $use_windows = yes)
dnl AC_SUBST(RESCOMP)
RESCOMP=windres.exe
AC_SUBST(RESCOMP)
AC_SUBST(RC_WX_INCLUDES)
AC_OUTPUT(Makefile src/Makefile)
